MMA-6945 Rydding og refaktorering