@@ -24,7 +24,7 @@ import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
-public class PostboksUtgaaendeRouteIT extends AbstractItest {
+public class PostboksUtgaaendeRouteIT extends AbstractIT {
 
 	public static final String INNGAAENDE = "inngaaende";
 	public static final String FEILMAPPE = "feilmappe";
@@ -76,7 +76,7 @@ public class PostboksUtgaaendeRouteIT extends AbstractItest {
 
 		final List<String> feilmappeContents = Files.list(sshdPath.resolve(FEILMAPPE).resolve(ZIP_FILE_NAME_NO_EXTENSION))
 				.map(p -> FilenameUtils.getName(p.toAbsolutePath().toString()))
-				.collect(Collectors.toList());
+				.toList();
 		assertTrue(feilmappeContents.containsAll(List.of(
 				"01.07.2020_R123456780_0003.zip",
 				"01.07.2020_R123456780_0004.zip",
@@ -106,7 +106,7 @@ public class PostboksUtgaaendeRouteIT extends AbstractItest {
 			try {
 				assertThat(Files.list(sshdPath.resolve(FEILMAPPE)
 						.resolve(ZIP_FILE_NAME_ORDERED_XML_FIRST_NO_EXTENSION))
-						.collect(Collectors.toList())).hasSize(4);
+						.toList()).hasSize(4);
 			} catch (NoSuchFileException e) {
 				fail();
 			}
@@ -114,7 +114,7 @@ public class PostboksUtgaaendeRouteIT extends AbstractItest {
 
 		final List<String> feilmappeContents = Files.list(sshdPath.resolve(FEILMAPPE).resolve(ZIP_FILE_NAME_ORDERED_XML_FIRST_NO_EXTENSION))
 				.map(p -> FilenameUtils.getName(p.toAbsolutePath().toString()))
-				.collect(Collectors.toList());
+				.toList();
 		assertTrue(feilmappeContents.containsAll(List.of(
 				"01.07.2020_R100000000_0003.zip",
 				"01.07.2020_R200000000_0004.zip",
@@ -134,7 +134,7 @@ public class PostboksUtgaaendeRouteIT extends AbstractItest {
 			try {
 				final List<String> feilmappeContents = Files.list(sshdPath.resolve(FEILMAPPE))
 						.map(p -> FilenameUtils.getName(p.toAbsolutePath().toString()))
-						.collect(Collectors.toList());
+						.toList();
 				assertTrue(feilmappeContents.contains(ZIP_FILE_NAME_NO_EXTENSION_ENCRYPTED + ".zip"));
 			} catch (NoSuchFileException e) {
 				fail();
